# mdbook-rust-analyzer-highlight

./: Cargo.toml  rustfmt.toml
src/: addon.rs  config.rs  highlight_conf.rs  highlighter.rs  inlay_hint_conf.rs  main.rs  whichlang.rs
test-book/: book.toml  helper.rs  hl_config.json  inlay_config.json  test.txt
test-book/src/: chapter_1.md
test-book/theme/: hlrs.css
